# skpro

./: .all-contributorsrc  .coverage.DESKTOP-K5VAFFS.4248.XShvyGBx  .coveragerc  .doctr-files  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CENSORING_INDICATOR_CONVENTIONS.md  CHANGES.rst  CITATION.rst  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_248_IMPLEMENTATION.md  ISSUE_313_FIX_SUMMARY.md  LICENSE.txt  Makefile  README.md  README.rst  advanced.html  authors.html  baselines.html  changes.html  conftest.py  contributing.html  extending.html  fix_867.py  genindex.html  github_deploy_key_alan_turing_institute_skpro.enc  index.html  installation.html  introduction.html  license.html  objects.inv  ort and black formatting to test file  parametric.html  py-modindex.html  pyproject.toml  requirements.txt  (+12 more)
.binder/: Dockerfile
.github/: .codecov.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  feature_request.md  maintenance-issue.md  report-all-other-issues-or-questions.md
.github/build_tools/: fail_on_missing_init_files.sh
.github/workflows/: allcontributors.yml  cancel.yml  cron-tests.yml  dependency-review.yml  test.yml  update_contributors.yml  wheels.yml
_modules/: abc.html  index.html
_modules/sklearn/: base.html
_modules/skpro/: base.html  density.html  ensemble.html  metrics.html  model_selection.html  utils.html
_sources/: advanced.rst.txt  baselines.rst.txt  contributing.rst.txt  extending.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  parametric.rst.txt  user_guide.rst.txt  vendors.rst.txt
_sources/api/: modules.rst.txt  skpro.baselines.rst.txt  skpro.parametric.rst.txt  skpro.rst.txt  skpro.vendors.rst.txt  skpro.workflow.manager.rst.txt  skpro.workflow.rst.txt  skpro.workflow.table.rst.txt
_static/: documentation_options.js
api/: modules.html  skpro.baselines.html  skpro.html  skpro.parametric.html  skpro.vendors.html  skpro.workflow.html  skpro.workflow.manager.html  skpro.workflow.table.html
build_tools/: changelog.py  generate_contributors.py  generate_estimator_data.py
docs/: Makefile  advanced.rst  baselines.rst  conf.py  contributing.rst  estimator_overview.md  estimator_overview.rst  estimator_overview_script.html  extending.rst  index.rst  installation.rst  introduction.rst  parametric.rst  user_guide.rst  vendors.rst  workflow.rst
docs/_static/: estimator_overview_db.json  table_all.html
docs/api/: skpro.parametric.rst  skpro.pymc.rst  skpro.rst  skpro.workflow.manager.rst  skpro.workflow.rst
docs/notebooks/: skpro_distribution_description.ipynb  skpro_distribution_interface.ipynb  skpro_loss_inrerface.ipynb
docs/source/: about.rst  api_reference.rst  changelog.rst  conf.py  contribute.rst  developer_guide.rst  estimator_overview.rst  get_started.rst  index.rst  installation.rst  related_software.rst  set_output.rst  tags_reference.rst  tutorials.rst  user_guide.rst  users.rst
examples/: 01_skpro_intro.ipynb  02_skpro_survival.ipynb  03_skpro_distributions.ipynb  04_BayesianLinearRegressor.ipynb  04_LinearRegression - OLS vs Bayesian.ipynb  04_bayesian_conjugate.ipynb  04_pymc_bayesian.ipynb  04_target_transform_logloss.ipynb  05_MCMCBayesianLinearRegression.ipynb  05_bayesian_conjugate_linear_regression.ipynb  baseline_regressors_demo.py  baseline_regressors_kde_hist.py  benchmark_baseline_regressors.py  custom_model.py  distribution_api.py  outlier_detection_example.py  pymc.py  simple.py  test.ipynb  utils.py  workflow.py
examples/bayesian/: 01_BayesianConjugateLinearRegressor.ipynb  02_BayesianLinearRegressor.ipynb  1. Introduction to Bayesian Linear Regression.ipynb  2. Gaussian Conjugate Prior.ipynb  3. Bayesian Proportion Estimation.ipynb  4. Bayesian Conjugate.ipynb  A_Linear_Regression_Introduction.ipynb  B_Conjugate_Prior.ipynb  test_data.csv  train_data.csv  utils.py
examples/parametric/: bagging.py  bayesian.py  hyperparameters.py  simple.py  workflow.py
examples/regression/: 02_BayesianLinearRegressor.ipynb  02_BayesianMCMCLinearRegressor.ipynb
examples/vendors/: edwardlib.py  pymc.py
experiments/: energy_experiment.py
extension_templates/: distfitter.py  distributions.py  regression.py  survival.py
memory/: MEMORY.md
skpro/: __init__.py  base.py  cross_validation.py  density.py  ensemble.py  metrics.py  model_selection.py  utils.py  zzz_base.py  zzz_utils.py
skpro/base/: Makefile  __init__.py  _base.py  _recursive_serialize.py  _serialize.py  old_base.py
skpro/baselines/: classical_baselines.py  density.py  density_baseline.py  dummy_regressor.py
skpro/bayesian/: bridge.py
skpro/benchmarking/: __init__.py  evaluate.py
skpro/classification/: __init__.py
skpro/compose/: __init__.py  _transformer.py  _transformers.py
skpro/dashboard/: README.md
skpro/datatypes/: __init__.py  _check.py  _common.py  _convert.py  _examples.py  _registry.py
skpro/distfitter/: __init__.py  _distfit_adapter.py  _distfitfitter.py  _empiricalfitter.py  _exponentialfitter.py  _laplacefitter.py  _mlefitter.py  _momfitter.py  _normalfitter.py  _uniformfitter.py
skpro/distributions/: __init__.py  _concat.py  alpha.py  asymmetric_laplace.py  base.py  basic_stats.py  beta.py  binomial.py  burr_iii.py  burr_xii.py  cauchy.py  chi_squared.py  cmp_pois_gam.py  concat.py  covariance.py  delta.py  discrete.py  discrete_truncated.py  distribution.py  distribution_base.py  distribution_custom.py  distribution_laplace.py  distribution_mixture.py  distribution_multivariate_normal.py  distribution_normal.py  dpqr.py  empirical.py  energy_formulae.md  erlang.py  exponential.py  f_dist.py  fatigue_life.py  fisk.py  fisk_scipy.py  gamma.py  gen_pareto.py  geometric.py  gompertz.py  gumbel.py  gumbel_l.py  (+52 more)
skpro/domains/: __init__.py  domains.py
skpro/pymc/: pymc.py  (+3 more)
tests/: conftest.py  test_base.py  test_baselines.py  test_density.py  test_distribution.py  test_ensemble.py  test_metrics.py  test_parametric.py  test_pymc.py  test_skeleton.py  test_utils.py  test_validation.py  test_vendors.py  utils_tests.py  zzz_test_ensemble.py
(+655 files in other folders)
