[project]
name = "skpro"
version = "2.0.0"
description = "A unified framework for probability distributions and probabilistic supervised regression"
authors = [
    {name = "skpro developers", email = "sktime.toolbox@gmail.com"},
    {name = "Franz Király"},
    {name = "Frithjof Gressmann"},
    {name = "Vitaly Davydov"},
]
maintainers = [
    {name = "skpro developers", email = "sktime.toolbox@gmail.com"},
    {name = "Franz Király"},
    {name = "Frithjof Gressmann"},
]
readme = "README.md"
keywords = [
    "data-science",
    "machine-learning",
    "data-mining",
    "time-series",
    "scikit-learn",
    "regression",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7,<3.12"
dependencies = [
    "numpy>=1.21.0,<1.25",
    "pandas>=1.1.0",
    "packaging",
    "scikit-base>=0.4.3",
    "scikit-learn>=0.24.0,<1.2.0",
    "scipy<2.0.0,>=1.2.0",
]

[project.optional-dependencies]
all_extras = [
    "attrs",
    "matplotlib>=3.3.2",
    "pymc3",
    "statsmodels>=0.12.1",
    "tabulate",
    "uncertainties",
]

dev = [
    "backoff",
    "httpx",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "pytest-timeout",
    "pytest-xdist",
    "wheel",
]

binder = [
    "jupyter",
]

docs = [
    "jupyter",
    "myst-parser",
    "nbsphinx>=0.8.6",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx_issues==1.2.0",
    "sphinx-gallery==0.6.0",
    "sphinx-design==0.3.0",
    "sphinx==4.1.1",
    "tabulate",
]

[project.urls]
Homepage = "https://www.skpro.ml"
Repository = "https://github.com/sktime/skpro"
Documentation = "https://www.skpro.ml"
Download = "https://pypi.org/project/skpro/#files"
"API Reference" = "https://www.skpro.ml"
"Release Notes" = "https://www.skpro.ml"

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools>61", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.nbqa.exclude]
black = "^docs/source/examples/"
flake8 = "^docs/source/examples/"
isort = "^docs/source/examples/"

[tool.setuptools]
zip-safe = true

[tool.setuptools.package-data]
sktime = [
    "*.csv",
    "*.csv.gz",
    "*.txt",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
