[project]
name = "skpro"
version = "2.2.0"
description = "A unified framework for probability distributions and probabilistic supervised regression"
authors = [
    {name = "skpro developers", email = "sktime.toolbox@gmail.com"},
    {name = "Franz Király"},
    {name = "Frithjof Gressmann"},
    {name = "Vitaly Davydov"},
]
maintainers = [
    {name = "skpro developers", email = "sktime.toolbox@gmail.com"},
    {name = "Franz Király"},
    {name = "Frithjof Gressmann"},
]
readme = "README.md"
keywords = [
    "data-science",
    "machine-learning",
    "data-mining",
    "time-series",
    "scikit-learn",
    "regression",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8,<3.13"
dependencies = [
    "numpy>=1.21.0,<1.27",
    "pandas>=1.1.0,<2.3.0",
    "packaging",
    "scikit-base>=0.6.1,<0.8.0",
    "scikit-learn>=0.24.0,<1.5.0",
    "scipy<2.0.0,>=1.2.0",
]

[project.optional-dependencies]
all_extras = [
    "attrs",
    "distfit",
    "mapie",
    "matplotlib>=3.3.2",
    "ngboost",
    "polars<0.21.0",
    "pyarrow<14.0.0; python_version < '3.12'",
    "statsmodels>=0.12.1",
    "tabulate",
    "uncertainties",
    "cyclic-boosting>=1.2.5; python_version < '3.12'"
]

dev = [
    "backoff",
    "httpx",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "pytest-timeout",
    "pytest-xdist",
    "wheel",
]

binder = [
    "jupyter",
]

docs = [
    "jupyter",
    "myst-parser",
    "nbsphinx>=0.8.6",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx<8.0.0,!=7.2.0",
    "sphinx-design<0.6.0",
    "sphinx-issues<5.0.0",
    "sphinx-gallery<0.16.0",
    "sphinx-panels",
    "tabulate",
]

[project.urls]
Homepage = "https://github.com/sktime/skpro"
Repository = "https://github.com/sktime/skpro"
Documentation = "https://github.com/sktime/skpro"
Download = "https://pypi.org/project/skpro/#files"
"API Reference" = "https://github.com/sktime/skpro"
"Release Notes" = "https://github.com/sktime/skpro"

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools>61", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.nbqa.exclude]
black = "^docs/source/examples/"
flake8 = "^docs/source/examples/"
isort = "^docs/source/examples/"

[tool.setuptools]
zip-safe = true

[tool.setuptools.package-data]
sktime = [
    "*.csv",
    "*.csv.gz",
    "*.txt",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
