[project]
name = "skpro"
version = "2.11.0"
description = "A unified framework for tabular probabilistic regression, time-to-event prediction, and probability distributions in python"
authors = [
    {name = "skpro developers", email = "info@sktime.net"},
    {name = "Franz Király"},
    {name = "Frithjof Gressmann"},
    {name = "Vitaly Davydov"},
]
maintainers = [
    {name = "skpro developers", email = "info@sktime.net"},
]
readme = "README.md"
keywords = [
    "data-science",
    "machine-learning",
    "data-mining",
    "time-series",
    "scikit-learn",
    "regression",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9,<3.15"
dependencies = [
    "numpy>=1.21.0,<2.4",
    "pandas>=1.1.0,<2.4.0",
    "packaging",
    "scikit-base>=0.6.1,<0.14.0",
    "scikit-learn>=0.24.0,<1.8.0",
    "scipy<2.0.0,>=1.2.0",
]

[project.optional-dependencies]
all_extras = [
    "distfit; python_version < '3.13'",
    "lifelines<0.31.0; python_version < '3.13'",
    "mapie; python_version < '3.13'",
    "matplotlib>=3.3.2",
    "ngboost<0.6.0; python_version < '3.13'",
    "polars<1.37.0",
    "pymc; python_version < '3.13'",
    "statsmodels>=0.12.1",
]

dev = [
    "backoff",
    "httpx",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "pytest-timeout",
    "pytest-xdist",
    "wheel",
]

binder = [
    "jupyter",
]

docs = [
    "jupyter",
    "myst-parser",
    "nbsphinx>=0.8.6",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx!=7.2.0,<9.0.0",
    "sphinx-design<0.7.0",
    "sphinx-issues<6.0.0",
    "sphinx-gallery<0.20.0",
    "sphinx-panels",
    "tabulate",
]

[project.urls]
Homepage = "https://github.com/sktime/skpro"
Repository = "https://github.com/sktime/skpro"
Documentation = "https://github.com/sktime/skpro"
Download = "https://pypi.org/project/skpro/#files"
"API Reference" = "https://github.com/sktime/skpro"
"Release Notes" = "https://github.com/sktime/skpro"

[project.license]
file = "LICENSE"

[build-system]
requires = ["setuptools>61", "wheel", "toml", "build"]
build-backend = "setuptools.build_meta"

[tool.nbqa.exclude]
black = "^docs/source/examples/"
flake8 = "^docs/source/examples/"
isort = "^docs/source/examples/"

[tool.setuptools]
zip-safe = true

[tool.setuptools.package-data]
sktime = [
    "*.csv",
    "*.csv.gz",
    "*.txt",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
